--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <h1>Bhawani jewellers kamtaul 7050037790</h1>
+    <h1 id="a1">Bhawani jewellers kamtaul 7050037790</h1>
   </body>
 </html>
