--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <h1 id="a1">Bhawani jewellers kamtaul 7050037790</h1>
+    <h1 id="a1">Bhawani Jewellers</h1>
+    <p> adress- Purani Durga mandir se Uttar,Kamtaul Bazar,Darbhanga</p>
+    <h3>mobile -7050037790 and 9708749828</h3>
+    <h4>Website under cunstruction</h4>
   </body>
 </html>
