--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     -->
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
+    <style>
+    .div1{
+      background-color:red;
+      }
+    </style>
   </head>
   <body>
+    <div class="div1">
     <h1 id="a1">Bhawani Jewellers</h1>
     <p> adress- Purani Durga mandir se Uttar,Kamtaul Bazar,Darbhanga</p>
     <h3>mobile -7050037790 and 9708749828</h3>
+      </div>
     <h4>Website under cunstruction</h4>
   </body>
 </html>
