--- a/index.html
+++ b/index.html
@@ -11,17 +11,32 @@
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
     <style>
+    *{
+      margin:0px;
+    }
     .div1{
       background-color:red;
+      text-align:center;
+      display:flex;
+      padding:20px;
+
+      }
+      #a1{
+        background-color:white;
+        border-radius:20px;
+        margin:30px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
       }
     </style>
   </head>
   <body>
     <div class="div1">
+      <div>
     <h1 id="a1">Bhawani Jewellers</h1>
     <p> adress- Purani Durga mandir se Uttar,Kamtaul Bazar,Darbhanga</p>
     <h3>mobile -7050037790 and 9708749828</h3>
-      </div>
+      </div></div>
     <h4>Website under cunstruction</h4>
   </body>
 </html>
