--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       background-color:red;
       text-align:center;
       display:flex;
+      justify-content:center;
       padding:20px;
 
       }
@@ -37,6 +38,7 @@
     <p> adress- Purani Durga mandir se Uttar,Kamtaul Bazar,Darbhanga</p>
     <h3>mobile -7050037790 and 9708749828</h3>
       </div></div>
+      <img src="" alt="">
     <h4>Website under cunstruction</h4>
   </body>
 </html>
