1 file modified, 2 added, 2 deleted

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
       }
+      body>h4{
+        text-align:center;
+      }
+    
     </style>
   </head>
   <body>
@@ -38,7 +42,8 @@
     <p> adress- Purani Durga mandir se Uttar,Kamtaul Bazar,Darbhanga</p>
     <h3>mobile -7050037790 and 9708749828</h3>
       </div></div>
-      <img src="" alt="">
+      <!-- <img src="abc.png" alt="Alps" style="width:100%"> -->
+      <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSnfxE4Dm1-f3s_Fwu9CvBBUrp6Qu3MQ4pwA&usqp=CAU" alt="Alps" style="width:100%"> -->
     <h4>Website under cunstruction</h4>
   </body>
 </html>
