--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
       display:flex;
       justify-content:center;
       padding:20px;
+      height:500px;
 
       }
       #a1{
-        background-color:white;
+        background-color:gold;
         border-radius:20px;
         margin:30px;
+        margin-bottom:70px;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        font-size:50px;
 
       }
       body>h4{
