--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       margin:0px;
     }
     .div1{
-      background-color:red;
+      background-color:;
       text-align:center;
       display:flex;
       justify-content:center;
@@ -35,10 +35,13 @@
       body>h4{
         text-align:center;
       }
-    
+    #billboard{
+      width:100%;
+    }
     </style>
   </head>
   <body>
+    <img src="https://raw.githubusercontent.com/gitkrishnaa/bill2.0_billboard_head/main/img/IMG-20230311-WA00251.jpg" alt="" id="billboard">
     <div class="div1">
       <div>
     <h1 id="a1">Bhawani Jewellers</h1>
