--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div class="div1">
       <div>
     <h1 id="a1">Bhawani Jewellers</h1>
+    <h2 style="background-color:red;color:yellow">bjgold.in</h2>
     <p> adress- Purani Durga mandir se Uttar,Kamtaul Bazar,Darbhanga</p>
     <h3>mobile -7050037790 and 9708749828</h3>
       </div></div>
